--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,29 @@
 spring.application.name=carworkshop
 
 # Database configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/carworkshop?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/carworkshop
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+
+# Hikari connection pool settings (properly configured for transactions)
+spring.datasource.hikari.auto-commit=false
+spring.datasource.hikari.transaction-isolation=TRANSACTION_READ_COMMITTED
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.connection-timeout=20000
+
+# PostgreSQL TEXT type handling
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+# Transaction management
+spring.jpa.properties.hibernate.connection.provider_disables_autocommit=true
 
 # Thymeleaf configuration
 spring.thymeleaf.cache=false
@@ -20,3 +35,7 @@ spring.sql.init.continue-on-error=true
 
 # Server port
 server.port=8080
+
+# Security Configuration
+spring.security.user.name=admin
+spring.security.user.password=admin
