--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,3 +45,6 @@ server.port=8080
 # Security Configuration
 spring.security.user.name=admin
 spring.security.user.password=admin
+
+# Uncomment this line to update the admin password
+#spring.profiles.active=password-update
